# tapet

./: Cargo.toml  README.md  tapet.toml
src/: config.rs  core.rs  main.rs  wallaven.rs  wallhaven.rs
