[package]
name = "tapet"
version = "0.1.0"
authors = ["Sotolf2 <trym.karlsen@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
attohttpc = {version = "0.16.0", features = ["json"]}
toml = "0.5.8"
shellexpand = "2.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.0"
fs_extra = "1.2.0"
